# aerotech-programming-course

./: .gitignore  README.md  clase-1.ipynb  generator.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.js  testing-requirements.txt
.github/ISSUE_TEMPLATE/: user-report.md
.github/workflows/: classes.yml  conditional-structures.yml  data-types.yml  exceptions.yml  functions.yml  iteration-structures.yml  libraries.yml  operators.yml
docs/github/: README.md
docs/python/interpreter/: README.md
docs/version-control/git/: README.md
lessons/: README.md  classes.ipynb  code-style.ipynb  conditional-structures.ipynb  data-types.ipynb  exceptions.ipynb  file-io.ipynb  functions.ipynb  introduction.ipynb  iteration-structures.ipynb  lesson-1-temp.ipynb  lesson-1.ipynb  lesson-2.ipynb  lesson-3-temp.ipynb  lesson-3.ipynb  operators.ipynb  packages.ipynb
lessons/classes/: theory.ipynb
lessons/code-style/: theory.ipynb
lessons/conditional-structures/: theory.ipynb
lessons/data-types/: theory.ipynb
lessons/exceptions/: theory.ipynb
lessons/functions/: theory.ipynb
lessons/iteration-structures/: theory.ipynb
lessons/libraries/: theory.ipynb
lessons/operators/: theory.ipynb
lessons/solutions/: exercise_02.py  exercise_04.py  exercise_11.py  exercise_12.py  exercise_14.py
requirements/: advanced-tests.txt  basic-tests.txt  pyproject.toml  requirements-scientific.txt  requirements-testing.txt  requirements.txt
solutions/: lesson-1.ipynb  lesson-2.ipynb
src/: index.html  user_path.js
src/environment-setup/: git.html  github-desktop.html  python.html  section-exercise.html  visual-studio-code.html
src/lessons/: README.md
src/scripts/: git.js  index.js  issue_report.js  python.js  templates.js
src/styles/: output.css  template.css
src/templates/: background.handlebars  content-card.handlebars  content_card.handlebars  content_card_collection.handlebars  content_card_div.handlebars  footer.handlebars  header.handlebars  navigation_buttons.handlebars  setup_step_slider.handlebars  step.handlebars  step_collection.handlebars  title.handlebars
src/version-control/: actions.html  branches.html  commits.html  discussions.html  forks.html  issues.html  merge-requests.html  projects.html  pull-requests.html  repositories.html  section-exercise.html  tags.html
(+136 files in other folders)
